(fix) fix overflow bug

--- a/webview/features/codeGen/CodeSnippet/styles.css
+++ b/webview/features/codeGen/CodeSnippet/styles.css
@@ -16,7 +16,7 @@
 }
 
 .code-gen-editor {
-  height: 100%;
+  height: 95%;
 }
 
 .select-code-option {
